--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,17 @@
-<div>
-  <div class="label">Project status:</div>
-  <div><%= @project.status %></div>
+<div class="status">
+  <div class="current-status">
+    Project status: <span class="value"><%= @project.status %></span>
+  </div>
+  <% unless @project.histories.empty? %>
+    <div>Status last changed at <%= @project.histories.first.created_at.strftime(DATE_FORMAT) %></div>
+  <% end %>
+  <div class="change-status">
+    <%= form_with method: :patch do |f| %>
+      <div class="form-group">
+        <label>New status</label>
+        <%= f.select :status, [''] + PROJECT_STATUSES.find_all{|s| s != @project.status}.map{|s| [s, s]} %>
+      </div>
+      <%= f.submit 'Change status'  %>
+    <% end %>
+  </div>
 </div>
