Project comments page added. Displaying number of comments on the main page with a link to adding new comment

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,4 +14,15 @@
       <%= f.submit 'Change status'  %>
     <% end %>
   </div>
+
+  <div class="comments">
+    <div class="comments-container">
+      <% if @project.comments.empty? %>
+        No comments yet
+      <% else %>
+        <div>Total comments: <%= @project.comments.count %></div>
+      <% end %>
+    </div>
+    <div><%= link_to 'Leave a new comment', new_comment_path %></div>
+  </div>
 </div>
