--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,15 +14,16 @@
       <%= f.submit 'Change status'  %>
     <% end %>
   </div>
+</div>
 
-  <div class="comments">
-    <div class="comments-container">
-      <% if @project.comments.empty? %>
-        No comments yet
-      <% else %>
-        <div>Total comments: <%= @project.comments.count %></div>
-      <% end %>
-    </div>
-    <div><%= link_to 'Leave a new comment', new_comment_path %></div>
+
+<div class="comments">
+  <div class="comments-info">
+    <% if @project.comments.empty? %>
+      No comments yet
+    <% else %>
+      <div>Total comments: <%= @project.comments.count %></div>
+    <% end %>
   </div>
+  <div><%= link_to 'Leave a new comment', new_comment_path, class: 'new-comment-link' %></div>
 </div>
