--- a/app/views/project_comments/index.html.erb
+++ b/app/views/project_comments/index.html.erb
@@ -1,5 +1,5 @@
 <h3>Comments</h3>
-<%= link_to 'Add new comment', new_comment_path, class: 'new-comment' %>
+<%= link_to 'Add new comment', new_comment_path, class: 'new-comment-link' %>
 <% if @comments.empty? %>
   <div>No comments yet</div>
 <% else %>
