--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
     <% #stylesheet_link_tag "application" %>
     <style type="text/css">
-    html, body { margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; background: #ddd; }
+    html, body { margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; background: #ddd; font-size: 16px; }
     .header { padding: 20px 25px; background: #369; color: #acf; }
     .container { padding: 20px 25px; background: #ddd; color: #333; }
     .flash { margin: 5px 0; padding: 5px 7px; text-align: center; border: 1px solid gray; background: #ccc; }
@@ -22,6 +22,9 @@
 
     .change-status { margin-top: 10px; }
     .project-comments { margin-top: 10px; }
+
+    .comment { margin-top: 15px; }
+    .comment .created-at { font-size: 11px; color: #aaa; }
     </style>
   </head>
 
