Styles for form controls

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <% #stylesheet_link_tag "application" %>
     <style type="text/css">
     html, body { margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; background: #ddd; font-size: 16px; }
+    select, button, textarea, input[type=submit] { padding: 3px 7px; font-family: Helvetica, Arial, sans-serif; font-size: 16px; }
     .header { padding: 20px 25px; background: #369; color: #acf; }
     .container { padding: 20px 25px; background: #ddd; color: #333; }
     .flash { margin: 5px 0; padding: 5px 7px; text-align: center; border: 1px solid gray; background: #ccc; }
